p2/confs/app-one.yaml
# APP ONE - Deployment + Service
# 1 replica, accessible via app1.com

# Deployment: defines how to run the application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one                    # Name of this deployment
  labels:
    app: app-one                   # Label to identify this app
spec:
  replicas: 1                      # Number of pod copies to run
  selector:
    matchLabels:
      app: app-one                 # Select pods with this label
  template:
    metadata:
      labels:
        app: app-one               # Label applied to created pods
    spec:
      containers:
      - name: app-one              # Container name
        image: paulbouwer/hello-kubernetes:1.10  # Docker image to use
        ports:
        - containerPort: 8080      # Port the app listens on inside container
---

# Service: exposes the pods to the network
apiVersion: v1
kind: Service
metadata:
  name: app-one-svc                # Name of this service
spec:
  selector:
    app: app-one                   # Route traffic to pods with this label
  ports:
  - port: 80                       # Port exposed by the service
    targetPort: 8080               # Port on the container to forward to
